# zephyr-ble-scanner

./: CMakeLists.txt  README.md  app.overlay  nrf52840_pca10056.overlay  prj.conf  test_script.py
src/: conn.c  main.c  sensor_conn.c  sensor_conn.h  sensor_scan.c  sensor_scan.h
